fix: overflow

--- a/packages/service-discovery/page-components/Checkout/commons/InvoicingParties/components/InvoicingPartiesContent/components/CurrentInvoicingParty/styles.module.css
+++ b/packages/service-discovery/page-components/Checkout/commons/InvoicingParties/components/InvoicingPartiesContent/components/CurrentInvoicingParty/styles.module.css
@@ -22,7 +22,6 @@
 	flex-direction: column;
 	justify-content: space-between;
 	height: 150px;
-	overflow: scroll;
 
 	:global {
 		.ui_multiselectt_options_container {
