--- a/packages/service-discovery/page-components/Checkout/commons/InvoicingParties/components/InvoicingPartiesContent/components/SelectedServicesInvoiceTo/styles.module.css
+++ b/packages/service-discovery/page-components/Checkout/commons/InvoicingParties/components/InvoicingPartiesContent/components/SelectedServicesInvoiceTo/styles.module.css
@@ -25,5 +25,4 @@
 	display: flex;
 	flex-wrap: wrap;
 	max-height: 300px;
-	overflow: auto;
 }
